tests/invalid/runtime/manual_ex060.pts
function main() : void {
    list<int> xs = [1];

    xs[3] = 10;
}
